--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -6,9 +6,6 @@ on:
     types:
       - completed
 
-  push:
-    tags: ['v*']
-
 jobs:
   auto-git-and-semver-tag:
     runs-on: ubuntu-latest
@@ -81,7 +78,7 @@ jobs:
         git push --tags origin "${new_tag}"
 
   semver-for-manually-created-tags:
-    if: ${{ startsWith(github.ref, 'refs/tags/') }}
+    if: ${{ startsWith(github.ref, 'refs/tags/') && github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
