--- a/.github/workflows/tag-and-release.yml
+++ b/.github/workflows/tag-and-release.yml
@@ -1,4 +1,4 @@
-name: Auto-Tag
+name: Auto-Tag and Release
 
 on:
   workflow_run:
@@ -7,13 +7,13 @@ on:
       - completed
 
 jobs:
-  auto-git-and-semver-tag:
+  auto-git-tag-and-release:
     runs-on: ubuntu-latest
     if: ${{ github.ref == 'refs/heads/main' && github.event.workflow_run.conclusion == 'success' }}
 
     # Expose step outputs as job outputs
     outputs:
-      new_tag: ${{ steps.run_git_auto_tag.outputs.new_tag }}
+      new_tag: ${{ steps.determine_next_tag.outputs.new_tag }}
 
     steps:
     - uses: actions/github-script@v6
@@ -31,7 +31,7 @@ jobs:
     - uses: actions/checkout@v4
     - uses: fregante/setup-git-user@v2
     - name: Determine new tag version
-      id: run_git_auto_tag
+      id: determine_next_tag
       # User controlled input needs to be santitised beforehand e.g., by adding an
       # intermediate env var to prevent the workflow being exposed to a critical
       # command injection attack
@@ -44,38 +44,20 @@ jobs:
         if $? != 0; then
           exit 1
         fi
-        script_output=$(echo "${script_output}" | tail -n 1)
-        echo "New tag version: ${script_output}"
-        echo "new_tag=${script_output}"  >> "$GITHUB_OUTPUT"
+        new_tag=$(echo "${script_output}" | tail -n 1)
+        echo "New tag: ${new_tag}"
+        echo "new_tag=${new_tag}"  >> "$GITHUB_OUTPUT"
 
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v4
+    - name: Create Git tag and release
+      uses: marvinpinto/action-automatic-releases@latest
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: eu-west-1
+        repo_token: "${{ secrets.GITHUB_TOKEN }}"
+        prerelease: false
+        automatic_release_tag: ${{ steps.determine_next_tag.outputs.new_tag }}
+        files: |
+          *
+      id: run_auto_tag_and_release
 
-    - name: Login to Amazon ECR
-      id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v1.6.1
-
-    - name: Docker pull, retag and push
-      env:
-        NEW_TAG: ${{ steps.run_git_auto_tag.outputs.new_tag }}
-        DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      run: |
-        docker pull ${DOCKER_REGISTRY}/navigator-admin-backend:main-${GITHUB_SHA::8}
-        docker tag ${DOCKER_REGISTRY}/navigator-admin-backend:main-${GITHUB_SHA::8}  navigator-admin-backend:main-${GITHUB_SHA::8}
-        .github/retag-and-push.sh navigator-admin-backend main-${GITHUB_SHA::8}
-
-    - name: Create and push Git tag
-      run: |
-        new_tag=${{ steps.run_git_auto_tag.outputs.new_tag }}
-        new_version_num=${new_tag#v}
-        git tag -a "${new_tag}" -m "Version ${new_version_num}"
-        git push --tags origin "${new_tag}"
 
   semver-for-manually-created-tags:
     if: ${{ startsWith(github.ref, 'refs/tags/') }}
@@ -103,3 +85,33 @@ jobs:
           docker pull ${DOCKER_REGISTRY}/navigator-admin-backend:main-${GITHUB_SHA::8}
           docker tag ${DOCKER_REGISTRY}/navigator-admin-backend:main-${GITHUB_SHA::8}  navigator-admin-backend:main-${GITHUB_SHA::8}
           .github/retag-and-push.sh navigator-admin-backend main-${GITHUB_SHA::8}
+
+
+  auto-semver:
+    needs: auto-git-tag-and-release
+    runs-on: ubuntu-latest
+    if: ${{ github.ref == 'refs/heads/main' && github.event.workflow_run.conclusion == 'success' }}
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v4
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: eu-west-1
+
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1.6.1
+
+    - name: Docker pull, retag and push
+      env:
+        NEW_TAG: ${{needs.auto-git-tag-and-release.outputs.new_tag}}
+        DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      run: |
+        docker pull ${DOCKER_REGISTRY}/navigator-admin-backend:main-${GITHUB_SHA::8}
+        docker tag ${DOCKER_REGISTRY}/navigator-admin-backend:main-${GITHUB_SHA::8}  navigator-admin-backend:main-${GITHUB_SHA::8}
+        .github/retag-and-push.sh navigator-admin-backend main-${GITHUB_SHA::8}
