--- a/.github/workflows/tag-and-release.yml
+++ b/.github/workflows/tag-and-release.yml
@@ -7,7 +7,7 @@ on:
       - completed
 
 jobs:
-  auto-git-tag-and-release:
+  auto-git-and-semver-tag:
     runs-on: ubuntu-latest
     if: ${{ github.ref == 'refs/heads/main' && github.event.workflow_run.conclusion == 'success' }}
 
@@ -48,13 +48,34 @@ jobs:
         echo "New tag: ${new_tag}"
         echo "new_tag=${new_tag}"  >> "$GITHUB_OUTPUT"
 
-    - name: Create Git tag and release
-      uses: marvinpinto/action-automatic-releases@latest
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v4
       with:
-        repo_token: "${{ secrets.GITHUB_TOKEN }}"
-        prerelease: false
-        automatic_release_tag: ${{ steps.determine_next_tag.outputs.new_tag }}
-      id: run_auto_tag_and_release
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: eu-west-1
+
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1.6.1
+
+    - name: Docker pull, retag and push
+      env:
+        NEW_TAG: ${{ steps.determine_next_tag.outputs.new_tag }}
+        DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      run: |
+        docker pull ${DOCKER_REGISTRY}/navigator-admin-backend:main-${GITHUB_SHA::8}
+        docker tag ${DOCKER_REGISTRY}/navigator-admin-backend:main-${GITHUB_SHA::8}  navigator-admin-backend:main-${GITHUB_SHA::8}
+        .github/retag-and-push.sh navigator-admin-backend main-${GITHUB_SHA::8}
+
+    - name: Create and push Git tag
+      run: |
+        new_tag=${{ steps.determine_next_tag.outputs.new_tag }}
+        new_version_num=${new_tag#v}
+        git tag -a "${new_tag}" -m "Version ${new_version_num}"
+        git push --tags origin "${new_tag}"
 
 
   semver-for-manually-created-tags:
@@ -85,30 +106,17 @@ jobs:
           .github/retag-and-push.sh navigator-admin-backend main-${GITHUB_SHA::8}
 
 
-  auto-semver:
-    needs: auto-git-tag-and-release
+  auto-release:
+    needs: auto-git-and-semver-tag
+    if: ${{ github.ref == 'refs/heads/main' && github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v4
+    - name: Create Git release
+      uses: ncipollo/release-action@v1.14.0
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: eu-west-1
-
-    - name: Login to Amazon ECR
-      id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v1.6.1
-
-    - name: Docker pull, retag and push
-      env:
-        NEW_TAG: ${{needs.auto-git-tag-and-release.outputs.new_tag}}
-        DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      run: |
-        docker pull ${DOCKER_REGISTRY}/navigator-admin-backend:main-${GITHUB_SHA::8}
-        docker tag ${DOCKER_REGISTRY}/navigator-admin-backend:main-${GITHUB_SHA::8}  navigator-admin-backend:main-${GITHUB_SHA::8}
-        .github/retag-and-push.sh navigator-admin-backend main-${GITHUB_SHA::8}
+        token: "${{ secrets.GITHUB_TOKEN }}"
+        generateReleaseNotes: true
+        prerelease: false
+        tag: ${{needs.auto-git-and-semver-tag.outputs.new_tag}}
