--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,3 +84,9 @@ jobs:
           .github/retag-and-push.sh navigator-admin-backend latest
         env:
           DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
+
+  tag:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v4
