--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,7 +86,10 @@ jobs:
           DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
 
   tag:
-    runs-on: ubuntu-latest
     needs: build
-    steps:
-      - uses: actions/checkout@v4
+    uses: climatepolicyradar/reusable-workflows/.github/workflows/tag.yml@main
+    with:
+      repo-name: navigator-admin-backend
+    secrets:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
