--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,7 +81,7 @@ jobs:
 
       - name: Push Images to ECR
         run: |
-          .github/retag-and-push.sh navigator-admin-backend latest
+          docker push navigator-admin-backend:latest
         env:
           DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
 
@@ -90,6 +90,8 @@ jobs:
     uses: climatepolicyradar/reusable-workflows/.github/workflows/tag.yml@main
     with:
       repo-name: navigator-admin-backend
+      semver-tag: main-${GITHUB_SHA::8}
     secrets:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
