--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,7 +90,6 @@ jobs:
           docker tag navigator-admin-backend "$ECR_REGISTRY/navigator-admin-backend:${branch}-${timestamp}-${short_sha}"
           docker push "$ECR_REGISTRY/navigator-admin-backend:${branch}-${timestamp}-${short_sha}"
 
-
   tag:
     needs: build
     uses: climatepolicyradar/reusable-workflows/.github/workflows/tag.yml@main
@@ -101,3 +100,9 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
+
+  release:
+    needs: tag
+    uses: climatepolicyradar/reusable-workflows/.github/workflows/release.yml@main
+    with:
+      new_tag: ${{ needs.tag.outputs.new_tag }}
