--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,9 +51,6 @@ jobs:
       - name: Build docker compose
         run: make build_dev
 
-      - name: Test bash scripts
-        run: make test_bashscripts
-
       - name: Run Unit Tests
         run: make unit_test
 
@@ -83,7 +80,29 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v2
 
       - name: Push Images to ECR
-        run: |
-          .github/retag-and-push.sh navigator-admin-backend latest
         env:
           DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        run: |
+          branch="$(echo ${GITHUB_HEAD_REF}| tr -c '[0-9,A-Z,a-z]' '-')"
+          timestamp=$(date --utc -Iseconds | cut -c1-19 | tr -c '[0-9]T\n' '-')
+          short_sha=${GITHUB_SHA:0:8}
+          docker tag navigator-admin-backend "$ECR_REGISTRY/navigator-admin-backend:${branch}-${timestamp}-${short_sha}"
+          docker push "$ECR_REGISTRY/navigator-admin-backend:${branch}-${timestamp}-${short_sha}"
+
+  tag:
+    needs: build
+    uses: climatepolicyradar/reusable-workflows/.github/workflows/tag.yml@main
+    with:
+      repo-name: navigator-admin-backend
+      semver-tag: main-${GITHUB_SHA::8}
+    secrets:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
+
+  release:
+    needs: tag
+    uses: climatepolicyradar/reusable-workflows/.github/workflows/release.yml@main
+    with:
+      new_tag: ${{ needs.tag.outputs.new_tag }}
