--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,6 +58,7 @@ jobs:
         run: make integration_test
 
   build:
+    if: ${{ ! startsWith(github.ref, 'refs/tags') }}
     runs-on: ubuntu-latest
     needs:
       - code-quality
