--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,6 +84,49 @@ jobs:
 
       - name: Push Images to ECR
         run: |
-          .github/retag-and-push.sh navigator-admin-backend latest
-        env:
-          DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
+          if [[ "${GITHUB_REF}" == "refs/heads"* ]]; then
+            branch="${GITHUB_REF/refs\/heads\//}"
+            if [[ "${branch}" = "main" ]]; then
+              docker_tag=latest
+              docker tag navigator-admin-backend "$ECR_REGISTRY/navigator-admin-backend:${docker_tag}"
+              docker push "$ECR_REGISTRY/navigator-admin-backend:${docker_tag}"
+            fi
+          elif [[ "${GITHUB_REF}" != "refs/tags"* ]]; then
+            echo "Assuming '${GITHUB_HEAD_REF}' is a branch"
+            if [[ -n "${GITHUB_HEAD_REF}" ]]; then
+                branch="$(echo ${GITHUB_HEAD_REF}| tr -c '[0-9,A-Z,a-z]' '-')"
+                timestamp=$(date --utc -Iseconds | cut -c1-19 | tr -c '[0-9]T\n' '-')
+                short_sha=${GITHUB_SHA:0:8}
+                docker_tag="${branch}-${timestamp}-${short_sha}"
+                docker tag navigator-admin-backend "$ECR_REGISTRY/navigator-admin-backend:${docker_tag}"
+                docker push "$ECR_REGISTRY/navigator-admin-backend:${docker_tag}"
+            fi
+          fi
+
+  manual-semver:
+    needs:
+      - code-quality
+      - test
+    if: ${{ startsWith(github.ref, 'refs/tags') }}
+    uses: climatepolicyradar/reusable-workflows/.github/workflows/semver.yml@main
+    secrets: inherit
+    with:
+      repo-name: navigator-admin-backend
+      semver-tag: main-${GITHUB_SHA::8}
+
+  tag:
+    needs: build
+    uses: climatepolicyradar/reusable-workflows/.github/workflows/tag.yml@main
+    with:
+      repo-name: navigator-admin-backend
+      semver-tag: main-${GITHUB_SHA::8}
+    secrets:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
+
+  release:
+    needs: tag
+    uses: climatepolicyradar/reusable-workflows/.github/workflows/release.yml@main
+    with:
+      new_tag: ${{ needs.tag.outputs.new_tag }}
