--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,15 +5,16 @@ repos:
       - id: check-json
       - id: detect-aws-credentials
         args: [--allow-missing-credentials]
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: "v0.3.2"
+    hooks:
+      - id: ruff
+      - id: ruff-format
   - repo: https://github.com/ambv/black
     rev: 23.1.0
     hooks:
       - id: black
         language_version: python3
-  - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: "v0.0.246"
-    hooks:
-      - id: ruff
   - repo: local
     hooks:
       - id: pyright
