--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -17,6 +17,8 @@ runtimes:
     - python@3.10.8
 # This is the section where you manage your linters. (https://docs.trunk.io/check/configuration)
 lint:
+  disabled:
+    - isort
   enabled:
     - actionlint@1.6.27
     - bandit@1.7.7
@@ -24,7 +26,6 @@ lint:
     - checkov@3.2.32
     - git-diff-check
     - hadolint@2.12.0
-    - isort@5.13.2
     - markdownlint@0.39.0
     - osv-scanner@1.6.2
     - prettier@3.2.5
