--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -31,8 +31,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install "poetry==1.6.1"
-          poetry config virtualenvs.create false
-          poetry install --no-cache
+          poetry install
 
       - name: Trunk Check
         uses: trunk-io/trunk-action@v1
