--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -33,6 +33,7 @@ jobs:
           python -m pip install "poetry==1.6.1"
           poetry config virtualenvs.create false
           poetry install --no-cache
+          export PYTHONPATH=.
 
       - name: Trunk Check
         uses: trunk-io/trunk-action@v1
