--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -33,7 +33,11 @@ jobs:
           python -m pip install "poetry==1.6.1"
           poetry config virtualenvs.create false
           poetry install --no-cache
-          export PYTHONPATH=.
+
+      - name: Export PYTHONPATH
+        run: |
+          echo $PYTHONPATH
+          echo "PYTHONPATH=$PYTHONPATH" >> $GITHUB_ENV
 
       - name: Trunk Check
         uses: trunk-io/trunk-action@v1
