--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Export PYTHONPATH
         run: |
           echo $PYTHONPATH
-          echo "PYTHONPATH=$PYTHONPATH" >> $GITHUB_ENV
+          echo "PYTHONPATH=." >> $GITHUB_ENV
 
       - name: Trunk Check
         uses: trunk-io/trunk-action@v1
