--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -4,6 +4,7 @@
 version: 0.1
 cli:
   version: 1.20.1
+
 # Trunk provides extensibility via plugins.
 # (https://docs.trunk.io/plugins)
 plugins:
@@ -11,6 +12,7 @@ plugins:
     - id: trunk
       ref: v1.4.4
       uri: https://github.com/trunk-io/plugins
+
 # Many linters and tools depend on runtimes - configure them here.
 # (https://docs.trunk.io/runtimes)
 runtimes:
@@ -18,14 +20,22 @@ runtimes:
     - go@1.21.0
     - node@18.12.1
     - python@3.10.8
+
 # This is the section where you manage your linters.
 # (https://docs.trunk.io/check/configuration)
 lint:
+  definitions:
+    - name: bandit
+      direct_configs: [bandit.yaml]
+      commands:
+        - name: lint
+          run: bandit --exit-zero -c bandit.yaml --format json --output ${tmpfile} ${target}
+
   disabled:
     - isort
   enabled:
     - actionlint@1.6.27
-    - bandit@1.7.7
+    - bandit@1.7.8
     - black@24.2.0
     - checkov@3.2.32
     - git-diff-check
@@ -42,6 +52,7 @@ lint:
     - trivy@0.49.1
     - trufflehog@3.68.5
     - yamllint@1.35.1
+
 actions:
   disabled:
     - trunk-announce
