--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -35,20 +35,26 @@ lint:
     - actionlint@1.6.27
     - bandit@1.7.8
     - black@24.2.0
-    - checkov@3.2.32
+    - checkov@3.2.34
     - git-diff-check
     - hadolint@2.12.0
+    - isort@5.13.2
     - markdownlint@0.39.0
     - osv-scanner@1.6.2
+    - pre-commit-hooks@4.5.0:
+        commands:
+          - end-of-file-fixer
+          - check-json
+          - detect-aws-credentials
     - prettier@3.2.5
-    - pyright@1.1.352
-    - ruff@0.3.1
-    - shellcheck@0.9.0
+    - pyright@1.1.353
+    - ruff@0.3.2
+    - shellcheck@0.10.0
     - shfmt@3.6.0
     - taplo@0.8.1
     - terrascan@1.19.1
     - trivy@0.49.1
-    - trufflehog@3.68.5
+    - trufflehog@3.69.0
     - yamllint@1.35.1
 
 actions:
