--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Trunk Check
         uses: trunk-io/trunk-action@v1
         with:
-          arguments: --fix --ci --diff full
+          arguments: --ci
 
       - name: Check code contains no FIXME's
         run: |
