--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -63,6 +63,8 @@ jobs:
         uses: ndeloof/install-compose-action@v0.0.1
         with:
           legacy: false
+      - run: docker compose --version
+      - run: docker-compose --version
 
       - uses: actions/checkout@v4
 
