--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ boto3 = "^1.28.46"
 moto = "^4.2.2"
 types-sqlalchemy = "^1.4.53.38"
 urllib3 = "^1.26.17"
-db-client = { git = "https://github.com/climatepolicyradar/navigator-db-client.git", tag = "v2.0.3" }
+db-client = { git = "https://github.com/climatepolicyradar/navigator-db-client.git", rev = "v3.2.1" }
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.17.0"
@@ -72,41 +72,3 @@ exclude = "^/alembic/versions/"
 include = ["app", "unit_tests", "integration_tests"]
 exclude = ["**/__pycache__"]
 pythonVersion = "3.9"
-
-[tool.ruff]
-select = ["E", "F", "D"]
-# Docstring Ignores:
-# D100 - Missing docstring in public module
-# D103 - Missing docstring in public function
-# D104 - Missing docstring in public package
-# D107 - Missing docstring in __init__
-# D202 - No blank lines allowed after function docstring
-# D203 - 1 blank line required before class docstring
-# D213 - Multi-line docstring summary should start at the first line
-# D400 - First line should end with a period
-# D401 - First line should be in imperative mood
-# D406 - Section name should end with a newline
-# D407 - Missing dashed underline after section
-# D413 - Missing blank line after last section
-# D415 - First line should end with a period, question mark, or exclamation point
-ignore = [
-  "D100",
-  "D103",
-  "D104",
-  "D107",
-  "D202",
-  "D203",
-  "D212",
-  "D400",
-  "D401",
-  "D406",
-  "D407",
-  "D413",
-  "D415",
-]
-line-length = 88
-
-# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
-[tool.ruff.per-file-ignores]
-"__init__.py" = ["F401"]
-"tests/*" = ["E501"]
