--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -3,14 +3,14 @@
 # To learn more about the format of this file, see https://docs.trunk.io/reference/trunk-yaml
 version: 0.1
 cli:
-  version: 1.20.1
+  version: 1.21.0
 
 # Trunk provides extensibility via plugins.
 # (https://docs.trunk.io/plugins)
 plugins:
   sources:
     - id: trunk
-      ref: v1.4.4
+      ref: v1.4.5
       uri: https://github.com/trunk-io/plugins
 
 # Many linters and tools depend on runtimes - configure them here.
@@ -34,34 +34,40 @@ lint:
   enabled:
     - actionlint@1.6.27
     - bandit@1.7.8
-    - black@23.1.0
-    - checkov@3.2.34
+    - black@24.3.0
+    - checkov@3.2.44
     - git-diff-check
     - hadolint@2.12.0
     - isort@5.13.2
     - markdownlint@0.39.0
-    - osv-scanner@1.6.2
+    - osv-scanner@1.7.0
     - pre-commit-hooks@4.5.0:
         commands:
           - end-of-file-fixer
           - check-json
           - detect-aws-credentials
     - prettier@3.2.5
-    - pyright@1.1.294
-    - ruff@0.3.2
+    - pyright@1.1.355
+    - ruff@0.3.4
     - shellcheck@0.10.0
     - shfmt@3.6.0
     - taplo@0.8.1
     - terrascan@1.19.1
-    - trivy@0.49.1
-    - trufflehog@3.69.0
+    - trivy@0.50.0
+    - trufflehog@3.70.3
     - yamllint@1.35.1
 
 actions:
   disabled:
-    - trunk-announce
     - trunk-check-pre-push
+    - trunk-announce
   enabled:
     - trunk-check-pre-commit
+    - configure-pyright-with-pyenv
     - trunk-fmt-pre-commit
     - trunk-upgrade-available
+  definitions:
+    - id: configure-pyright-with-pyenv
+      run: source .trunk/configure-pyright-with-pyenv.sh
+      triggers:
+        - git_hooks: [pre-commit]
