--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,11 +3,7 @@ name = "admin_backend"
 version = "0.0.1"
 description = ""
 authors = ["CPR-dev-team <tech@climatepolicyradar.org>"]
-packages = [
-  { include = "app" },
-  { include = "integration_tests" },
-  { include = "unit_tests" },
-]
+packages = [{ include = "app" }, { include = "tests" }]
 
 [tool.poetry.dependencies]
 python = "^3.9"
@@ -69,7 +65,7 @@ target-version = ["py39"]
 exclude = "^/alembic/versions/"
 
 [tool.pyright]
-include = ["app", "unit_tests", "integration_tests"]
+include = ["app", "tests"]
 exclude = ["**/__pycache__"]
 pythonVersion = "3.9"
 venv = "admin-backend"
