--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -43,6 +43,20 @@ jobs:
       - name: Run Integration Tests
         run: make integration_test
 
+  check-auto-tagging-will-work:
+    if: ${{ ! startsWith(github.ref, 'refs/tags') && ! startsWith(github.ref, 'refs/heads/main') }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Determine new tag version
+        id: determine_next_tag
+        uses: climatepolicyradar/get-next-tag-from-pr-body@main
+        with:
+          pr_body: ${{ github.event.pull_request.body }}
+          pr_number: ${{ github.event.pull_request.number }}
+
+      - name: Echo next tag
+        run: echo ${{ steps.determine_next_tag.outputs.new_tag }}
+
   build:
     if: ${{ ! startsWith(github.ref, 'refs/tags') }}
     runs-on: ubuntu-latest
