--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -51,7 +51,7 @@ jobs:
         id: determine_next_tag
         uses: climatepolicyradar/get-next-tag-from-pr-body@main
         with:
-          pr_body: "${{ github.event.pull_request.body }}"
+          pr_body: ${{ github.event.pull_request.body }}
           pr_number: ${{ github.event.pull_request.number }}
 
       - name: Echo next tag
