--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -47,15 +47,20 @@ jobs:
     if: ${{ ! startsWith(github.ref, 'refs/tags') && ! startsWith(github.ref, 'refs/heads/main') }}
     runs-on: ubuntu-latest
     steps:
-      - name: Determine new tag version
-        id: determine_next_tag
-        uses: climatepolicyradar/get-next-tag-from-pr-body@main
-        with:
-          pr_body: ${{ github.event.pull_request.body }}
-          pr_number: ${{ github.event.pull_request.number }}
-
       - name: Echo next tag
-        run: echo ${{ steps.determine_next_tag.outputs.new_tag }}
+        run: |
+          echo ${{ github.event.pull_request.number }}
+          echo "${{ github.event.pull_request.body }}"
+
+      # - name: Determine new tag version
+      #   id: determine_next_tag
+      #   uses: climatepolicyradar/get-next-tag-from-pr-body@main
+      #   with:
+      #     pr_body: ${{ github.event.pull_request.body }}
+      #     pr_number: ${{ github.event.pull_request.number }}
+
+      # - name: Echo next tag
+      #   run: echo ${{ steps.determine_next_tag.outputs.new_tag }}
 
   build:
     if: ${{ ! startsWith(github.ref, 'refs/tags') }}
