--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -48,9 +48,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Echo next tag
+        # User controlled input needs to be santitised beforehand e.g., by adding an
+        # intermediate env var to prevent the workflow being exposed to a critical
+        # command injection attack
+        env:
+          PR_BODY: "${{ github.event.pull_request.body }}"
+          PR_NUMBER: "${{ github.event.pull_request.number }}"
         run: |
-          echo ${{ github.event.pull_request.number }}
-          echo "${{ github.event.pull_request.body }}"
+          echo "${PR_BODY}"
+          echo ${PR_NUMBER}
 
       # - name: Determine new tag version
       #   id: determine_next_tag
