--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -47,16 +47,11 @@ jobs:
     if: ${{ ! startsWith(github.ref, 'refs/tags') && ! startsWith(github.ref, 'refs/heads/main') }}
     runs-on: ubuntu-latest
     steps:
-      - name: Echo next tag
-        # User controlled input needs to be santitised beforehand e.g., by adding an
-        # intermediate env var to prevent the workflow being exposed to a critical
-        # command injection attack
+      - name: Dump GitHub context
+        shell: sh
         env:
-          PR_BODY: "${{ github.event.pull_request.body }}"
-          PR_NUMBER: "${{ github.event.pull_request.number }}"
-        run: |
-          echo "${PR_BODY}"
-          echo ${PR_NUMBER}
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
 
       - name: Determine new tag version
         id: determine_next_tag
