--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -66,8 +66,8 @@ jobs:
           PR_BODY: "${{ github.event.pull_request.body }}"
           PR_NUMBER: "${{ github.event.pull_request.number }}"
         with:
-          pr_body: "${{ env.pr_body }}"
-          pr_number: ${{ env.pr_number }}
+          body: "${{ env.PR_BODY }}"
+          number: ${{ env.PR_NUMBER }}
 
       # - name: Echo next tag
       #   run: echo ${{ steps.determine_next_tag_from_pr.outputs.new_tag }}
