--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -54,17 +54,19 @@ jobs:
 
       - uses: actions/checkout@v4
 
-      - name: Configure test env variables
-        run: cp .env.example .env
-
-      - name: Build docker compose
-        run: make build_dev
-
       - name: Run Unit Tests
-        run: make unit_test
+        run: make test TEST=tests/unit_tests/
+        env:
+          POSTGRES_USER: navigator_admin
+          POSTGRES_PASSWORD: password
+          POSTGRES_DB: navigator
 
       - name: Run Integration Tests
-        run: make integration_test
+        run: make test TEST=tests/integration_tests
+        env:
+          POSTGRES_USER: navigator_admin
+          POSTGRES_PASSWORD: password
+          POSTGRES_DB: navigator
 
   build:
     if: |
