--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ POSTGRES_PASSWORD=password
 # You can get this from the AWS
 # If you're using `make dev` you will need to use the staging value
 SECRET_KEY=secret_test_key
+TOKEN_SECRET_KEY=secret_token_key
