--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -53,7 +53,7 @@ services:
       - 5432:5432
 
   localstack:
-    container_name: "${LOCALSTACK_DOCKER_NAME:-localstack-main}"
+    container_name: "${LOCALSTACK_DOCKER_NAME:-localstack-dev}"
     image: localstack/localstack:s3-latest
     ports:
       - 4566:4566 # LocalStack Gateway
