--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -45,7 +45,7 @@ services:
     volumes:
       - ./dumps/navigator.sql:/docker-entrypoint-initdb.d/navigator.sql
     healthcheck:
-      test: [CMD-SHELL, "pg_isready -U ${POSTGRES_USER}"]
+      test: [CMD-SHELL, "pg_isready -U ${POSTGRES_DB}"]
       interval: 5s
       timeout: 3s
       retries: 30
