--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ bcrypt = "4.0.1"
 fastapi-cli = "^0.0.5"
 pytest-watch = "^4.2.0"
 fastapi-utils = { version = "0.8.0", extras = ["all"] }
+python-dateutil = "^2.9.0.post0"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^3.8.0"
