--- a/.trunk/configs/ruff.toml
+++ b/.trunk/configs/ruff.toml
@@ -1,8 +1,5 @@
 # Generic, formatter-friendly config.
-select = ["D3", "E", "F"]
+lint.select = ["D3", "E", "F"]
 
 # Never enforce `E501` (line length violations). This should be handled by formatters.
-ignore = ["E501"]
-
-[lint]
-ignore-init-module-imports = true
+lint.ignore = ["E501"]
