--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -19,6 +19,7 @@ services:
       ADMIN_POSTGRES_DATABASE: navigator
       ADMIN_POSTGRES_PASSWORD: password
       SECRET_KEY: secret_test_key
+      LOG_LEVEL: DEBUG
 
       # Bulk import
       SLACK_WEBHOOK_URL: skip
