--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "admin_backend"
-version = "2.18.4"
+version = "2.18.5"
 description = ""
 authors = ["CPR-dev-team <tech@climatepolicyradar.org>"]
 packages = [{ include = "app" }, { include = "tests" }]
@@ -35,6 +35,7 @@ bcrypt = "4.0.1"
 fastapi-cli = "^0.0.5"
 pytest-watch = "^4.2.0"
 fastapi-utils = { version = "0.8.0", extras = ["all"] }
+python-dateutil = "^2.9.0.post0"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^3.8.0"
@@ -43,7 +44,7 @@ pytest = "^8.3.2"
 pytest-dotenv = "^0.5.2"
 pytest-mock = "^3.7.0"
 black = "^24.4.2"
-pyright = "1.1.391"
+pyright = "1.1.394"
 pytest-asyncio = "^0.24.0"
 ruff = "^0.7.3"
 
@@ -66,7 +67,7 @@ ignore = """
 
 [tool.black]
 line-length = 88
-target-version = ["py39"]
+target-version = ["py310"]
 exclude = "^/alembic/versions/"
 
 [tool.pyright]
