--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -36,7 +36,9 @@ jobs:
       checks: write
       # For repo checkout
       contents: read
-    uses: climatepolicyradar/reusable-workflows/.github/workflows/python-precommit-validator.yml@v16
+    uses: climatepolicyradar/reusable-workflows/.github/workflows/python-precommit-validator.yml@v21
+    with:
+      python-version: 3.11
 
   test:
     if: |
